# fixinventory

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .imgbotconfig  .pylintrc  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.base  Dockerfile.fixbase  Dockerfile.fixcore  Dockerfile.fixinventorybase  Dockerfile.fixmetrics  Dockerfile.fixshell  Dockerfile.fixworker  Dockerfile.resh  Dockerfile.resotobase  Dockerfile.resotocore  Dockerfile.resotometrics  Dockerfile.resotoshell  Dockerfile.resotoworker  Dockerfile.ui  LICENSE  Makefile  README.md  README.rst  SECURITY.md  bump.sh  codecov.yml  docker-compose.yaml  release-notes.md  requirements-all.txt  requirements-dev.txt  requirements-extra.txt  requirements-test.txt  requirements.txt  setup.cfg  setup_venv.sh  tox.ini
fixcore/: .gitignore  .pylintrc  MANIFEST.in  Makefile  README.md  jupyter_lite_config.json  pyproject.toml  requirements-jupyterlite.txt  setup.cfg  tox.ini
fixcore/docs/: workflow.puml
fixcore/fixcore/: __init__.py  __main__.py  async_extensions.py  console_renderer.py  constants.py  core_config.py  dependencies.py  error.py  ids.py  message_bus.py  metrics.py  system_start.py  types.py  util.py  validator.py  worker_task_queue.py
fixcore/tools/: README.md  grapher.py  render_dot.py
fixlib/: MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  tox.ini
fixlib/fixlib/: args.py  basecategories.py  baseplugin.py  baseresources.py  config.py  durations.py  event.py  json.py  json_bender.py  jwt.py  logger.py  parse_util.py  proc.py  threading.py  tree.py  units.py  utils.py  x509.py
fixlib/test/: durations_test.py  json_bender_test.py  parse_util_test.py  test_args.py  test_basecategories.py  test_baseresources.py  test_ca.py  test_config.py  test_graph.py  test_graph_extensions.py  test_json.py  test_jwt.py  test_logging.py  test_plugin.py  test_tree.py  test_utils.py  test_web.py  test_x509.py
fixmetrics/: MANIFEST.in  README.md  pyproject.toml  tox.ini
fixmetrics/fixmetrics/: __main__.py  config.py  default_metrics.yaml  metrics.py  search.py
fixmetrics/test/: test_args.py
fixshell/: .pylintrc  Makefile  README.md  pyproject.toml  tox.ini
fixshell/fixshell/: __init__.py  __main__.py  authorized_client.py  benchmark.py  promptsession.py  shell.py
fixshell/test/: test_auth.py  test_benchmark.py  test_promptsession.py  test_protected_files.py
fixworker/: .coverage.case.local.77596.XBEGKnox  Makefile  README.md  pyproject.toml  tox.ini
fixworker/fixworker/: __main__.py  cleanup.py  collect.py  config.py  fixcore.py  pluginloader.py  tag.py  utils.py
fixworker/test/: test_args.py  test_collect.py  test_fixcore.py  test_utils.py
plugins/aws/: Makefile  README.md  noxfile.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
plugins/aws_k8s/: README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
plugins/azure/: Makefile  README.md  iam.puml  pyproject.toml  setup.cfg  tox.ini
plugins/cleanup_aws_alarms/: README.md  noxfile.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
plugins/cleanup_aws_loadbalancers/: README.md  noxfile.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
plugins/dockerhub/: README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
plugins/gcp/: Makefile  README.md  noxfile.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
plugins/github/: README.md  noxfile.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
plugins/onprem/: README.md  noxfile.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
plugins/slack/: README.md  noxfile.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
plugins/vsphere/: .flake8  LICENSE  README.md  noxfile.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
resoto-bundle/: .gitignore  README.md  pyproject.toml
resoto-bundle/resoto/: __init__.py
resotocore/: .flake8  .gitignore  .pylintrc  MANIFEST.in  Makefile  README.md  jupyter_lite_config.json  noxfile.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-jupyterlite.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
resotocore/core/: __init__.py  __main__.py  console_renderer.py  constants.py  dependencies.py  durations.py  parse_util.py  util.py
resotocore/docs/: workflow.puml
resotocore/jupyterlite_extras/: jupyter-lite.json
resotocore/report/: benchmark_template.json  check_template.json
resotocore/resotocore/: __init__.py  __main__.py  async_extensions.py  compat.py  console_renderer.py  constants.py  core_config.py  dependencies.py  durations.py  error.py  ids.py  jira.py  jira_meta.py  message_bus.py  metrics.py  parse_util.py  service.py  system_start.py  types.py  util.py  validator.py  worker_task_queue.py
resotocore/tools/: README.md  collect_single.py  grapher.py  render_dot.py
resotolib/: .flake8  MANIFEST.in  Makefile  README.md  mypy.ini  noxfile.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
resotolib/resotolib/: __init__.py  args.py  baseplugin.py  baseresources.py  cleaner.py  config.py  durations.py  event.py  json.py  json_bender.py  jwt.py  lock.py  logger.py  logging.py  parse_util.py  plugin_handler.py  plugin_task_handler.py  pluginloader.py  proc.py  signal.py  threading.py  tree.py  types.py  units.py  utils.py  x509.py
resotolib/test/: durations_test.py  json_bender_test.py  parse_util_test.py  test_args.py  test_baseresources.py  test_ca.py  test_config.py  test_graph.py  test_graph_export.py  test_graph_extensions.py  test_json.py  test_jwt.py  test_logging.py  test_plugin.py  (+4 more)
resotometrics/: MANIFEST.in  README.md  noxfile.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
resotoshell/: Makefile  README.md  noxfile.py  pyproject.toml  pytest.ini  requirements.txt  setup-wizard.json  setup.py  tox.ini
resotoworker/: .flake8  Makefile  README.md  noxfile.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
(+3308 files in other folders)
