
[options]
packages = find:
include_package_data = True
# we use __file__ --> move to pkg_resources.resource_stream
zip_safe = False

[flake8]
max-line-length = 120
exclude = .git,.tox,__pycache__,.idea,.pytest_cache,docs
application-import-names = fixcore tests
ignore = N818, W503, E203

[mypy]
ignore_missing_imports = True

[coverage:run]
concurrency = multiprocessing
# omit source files from fixlib
omit = */fixlib/*
