[tool.poetry]
name = "resoto"
version = "2.3.2"
description = "Resoto bundle - single package for Resoto components"
authors = ["Some Engineering Inc."]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/someengineering/resoto"
repository = "https://github.com/someengineering/resoto"
classifiers = [
    # Current project status
    "Development Status :: 4 - Beta",
    # Audience
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    # License information
    "License :: OSI Approved :: Apache Software License",
    # Supported python versions
    "Programming Language :: Python :: 3.8",
    # Supported OS's
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    # Extra metadata
    "Environment :: Console",
    "Natural Language :: English",
    "Topic :: Security",
    "Topic :: Utilities",
]

[tool.poetry.urls]
Changelog = "https://github.com/someengineering/resoto/releases"

[tool.poetry.dependencies]
python = "^3.9"
resotocore = "2.3.2"
resotoworker = "2.3.2"
resotometrics = "2.3.2"
resotoshell = "2.3.2"
resoto-plugin-aws = "2.3.2"
resoto-plugin-cleanup-aws-alarms = "2.3.2"
resoto-plugin-cleanup-aws-loadbalancers = "2.3.2"
resoto-plugin-cleanup-aws-vpcs = "2.3.2"
resoto-plugin-cleanup-expired = "2.3.2"
resoto-plugin-cleanup-untagged = "2.3.2"
resoto-plugin-cleanup-volumes = "2.3.2"
resoto-plugin-digitalocean = "2.3.2"
resoto-plugin-example-collector = "2.3.2"
resoto-plugin-gcp = "2.3.2"
resoto-plugin-github = "2.3.2"
resoto-plugin-k8s = "2.3.2"
resoto-plugin-onelogin = "2.3.2"
resoto-plugin-onprem = "2.3.2"
resoto-plugin-protector = "2.3.2"
resoto-plugin-slack = "2.3.2"
resoto-plugin-tagvalidator = "2.3.2"
resoto-plugin-vsphere = "2.3.2"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
