[tool.poetry]
name = "resotolib"
version = "2.0.0a17"
description = "Resoto common library."
authors = ["Some Engineering Inc."]
license = "Apache-2.0"
homepage = "https://resoto.com/"
repository = "https://github.com/someengineering/resoto"
documentation = "https://resoto.com/docs/"
keywords = ["cloud", "security", "infrastructure intelligence"]
classifiers = [
    # Current project status
    "Development Status :: 4 - Beta",
    # Audience
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    # License information
    "License :: OSI Approved :: Apache Software License",
    # Supported python versions
    "Programming Language :: Python :: 3.8",
    # Supported OS's
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    # Extra metadata
    "Environment :: Console",
    "Natural Language :: English",
    "Topic :: Security",
    "Topic :: Utilities",
]
include = ["resotolib/web/static/*"]

[tool.poetry.dependencies]
python = "^3.8"
networkx = "2.6.3"
typeguard = "2.13.3"
websocket-client = "1.2.3"
psutil = "5.9.0"
requests = "2.27.1"
prometheus-client = "0.12.0"
PyJWT = "2.3.0"
typing-compat = "0.1.0"
CherryPy = "18.6.1"
cryptography = "36.0.1"
pyparsing = "3.0.6"
# todo: remove the line below once we use poetry 1.2
platformdirs = "2.5.0"
# todo: remove the line below once we use poetry 1.2
packaging = "21.3"
# todo: remove the line below once we use poetry 1.2
"tomli" = "2.0.1"

[tool.poetry.dev-dependencies]
shared_dev = { path = "../shared_dev" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["resotolib"]

[tool.coverage.run]
branch = true
source = ["resotolib"]

[tool.coverage.report]
show_missing = true