[project]
name = "resotolib"
version = "3.6.5"
authors = [{name="Some Engineering Inc."}]
description = "Resoto common library."
license = {file="LICENSE"}
requires-python = ">=3.9"
classifiers = [
    # Current project status
    "Development Status :: 4 - Beta",
    # Audience
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    # License information
    "License :: OSI Approved :: Apache Software License",
    # Supported python versions
    "Programming Language :: Python :: 3.9",
    # Supported OS's
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    # Extra metadata
    "Environment :: Console",
    "Natural Language :: English",
    "Topic :: Security",
    "Topic :: Utilities",
]
readme = {file="README.md", content-type="text/markdown"}
keywords = ["cloud security"]

dependencies = [
    "CherryPy",
    "Pint",
    "PyJWT",
    "PyYAML",
    "aiohttp[speedups]",
    "attrs",
    "cattrs",
    "cryptography",
    "frozendict",
    "jsons",
    "networkx",
    "parsy",
    "prometheus-client",
    "psutil",
    "python-dateutil",
    "requests",
    "typeguard",
    "tzdata",
    "tzlocal",
    "websocket-client"
]

[project.optional-dependencies]
test = [
    "black",
    "coverage",
    "flake8",
    "hypothesis",
    "mypy",
    "pep8-naming",
    "pylint",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-runner",
    "tox",
    "wheel",
]

[project.urls]
Documentation = "https://resoto.com"
Source = "https://github.com/someengineering/resoto/tree/main/resotolib"

[tool.setuptools.package-data]
resotolib = ["py.typed"]

[build-system]
requires = ["setuptools>=67.8.0", "wheel>=0.40.0", "build>=0.10.0"]
build-backend = "setuptools.build_meta"

