[project]
name = "resotoworker"
version = "3.6.5"
authors = [{name="Some Engineering Inc."}]
description = "Runs collector plugins and sends the result to resotocore."
license = {file="LICENSE"}
requires-python = ">=3.9"
classifiers = [ "Programming Language :: Python :: 3" ]
readme = {file="README.md", content-type="text/markdown"}

dependencies = [
    "resotolib==3.6.5",
    "tenacity",
    "CherryPy",
]

[project.scripts]
resotoworker = "resotoworker.__main__:main"

[project.urls]
Documentation = "https://resoto.com"
Source = "https://github.com/someengineering/resoto/tree/main/resotoworker"

[build-system]
requires = ["setuptools>=67.8.0", "wheel>=0.40.0", "build>=0.10.0"]
build-backend = "setuptools.build_meta"

