[project]
name = "fixinventory-plugin-aws"
version = "4.3.0"
authors = [{name="Some Engineering Inc."}]
description = "Runs collector plugins and sends the result to fixcore."
license = { text="Apache-2.0" }
requires-python = ">=3.12"
classifiers = [
    # Current project status
    "Development Status :: 5 - Production/Stable",
    # Audience
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    # License information
    "License :: OSI Approved :: Apache License 2.0 (Apache-2.0+)",
    # Supported python versions
    "Programming Language :: Python :: 3.12",
    # Supported OS's
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    # Extra metadata
    "Environment :: Console",
    "Natural Language :: English",
    "Topic :: Security",
    "Topic :: Utilities",
]
readme = {file="README.md", content-type="text/markdown"}

dependencies = [
    "fixinventorylib==4.3.0",
    "fixinventorydata",
    "retrying",
    "boto3",
    "botocore",
    "cloudsplaining",
]

[project.entry-points."fix.plugins"]
aws = "fix_plugin_aws:AWSCollectorPlugin"

[project.urls]
Documentation = "https://inventory.fix.security"
Source = "https://github.com/someengineering/fix/tree/main/plugins/aws"

[build-system]
requires = ["setuptools>=67.8.0", "wheel>=0.40.0", "build>=0.10.0"]
build-backend = "setuptools.build_meta"
