[project]
name = "resoto-plugin-aws-k8s"
version = "3.6.0"
authors = [{name="Some Engineering Inc."}]
description = "Resoto AWS-K8s Collector Plugin"
license = {file="LICENSE"}
requires-python = ">=3.9"
classifiers = [
    # Current project status
    "Development Status :: 4 - Beta",
    # Audience
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    # License information
    "License :: OSI Approved :: Apache Software License",
    # Supported python versions
    "Programming Language :: Python :: 3.9",
    # Supported OS's
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    # Extra metadata
    "Environment :: Console",
    "Natural Language :: English",
    "Topic :: Security",
    "Topic :: Utilities",
]
readme = {file="README.md", content-type="text/markdown"}
keywords = ["aws", "k8s"]

dependencies = [ "resotolib==3.6.0" ]

[project.optional-dependencies]
dev = [ "mypy" ]

[project.entry-points."resoto.plugins"]
aws_k8s_collector = "resoto_plugin_aws_k8s:AWSK8sCollectorPlugin"

[project.urls]
Documentation = "https://resoto.com"
Source = "https://github.com/someengineering/resoto/tree/main/plugins/aws_k8s"

[build-system]
requires = ["setuptools>=67.8.0", "wheel>=0.40.0", "build>=0.10.0"]
build-backend = "setuptools.build_meta"


